Fixed overflow bug in View Book Definition
git-tfs-id: [https://tfsnpt.int.thomson.com:443/tfs/Cobalt_Collection/]$/Cobalt eBook Builder/Development;C219453

--- a/ebookManager/WebContent/theme/layout.css
+++ b/ebookManager/WebContent/theme/layout.css
@@ -296,6 +296,7 @@ a:hover {
 	*display: inline; /* IE7 hack */
 }
  div.field {
+ 	overflow:auto;
  	text-align: center;
  }
 .bookDefinitionCRUD .leftDefinitionForm,
